# AnyServer

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  flake.nix  test.sh
backend/: Cargo.toml  build.rs
backend/.cargo/: audit.toml
backend/.sqlx/: query-00489998609275e6b2ae047e9ae95ef85d9033191bb23c4d8c535dde66f394d9.json  query-01c9f09634e3ea72b2d718b582e780a19160521e7109a80afd1fa0ad954e06cf.json  query-0ba37740cf4ac32434ca86608cd77a764c9a7c4cc70bab625380ae60fa297929.json  query-0c8b5fbcf33905b13a025c3b514c03a05a2da9dd6be729bcc116411aeb577a1a.json  query-103ca4bfd9e2fa056af6651aad6f4429716d5a0de74d25ad969c06fc9a3d5ac4.json  query-195c0ed7a786d2fcff436d0c828943484978c0583dcd1a874a1b0714dd873b3f.json  query-2c94fee3157386efc79277bb5e1d300475892e5b4476b2580d08a60999140a7a.json  query-2fff14415447a89e8a5fac7d4182720005b6ae4bf63354a7fed2f912fc1782aa.json  query-3c1f946215ec74e20641d3d8ddafdca1608bddbe8d73152e31e053faf359a867.json  query-4aafb0155de6554a523035546de28e340b852007f227a32d542c4170412905d2.json  query-55d86c609d38b9998b874c2b051a6a31726ff0260884b268c7534f3a937c6e91.json  query-57e4e560cabdd68f11faad752f718fafa3758a1a562076e698ffd77afac54dfa.json  query-5978b24a5348445da72c65f7ef9d6c385715d80b907ab1d7327b37c5e17c243c.json  query-5ec925209ccefb6aa3c20dfc3abefcc05117ecf1f1526eec36dcab818f718616.json  query-5ee42044d5b38c8134c0855306a06c49a6a568c93e152241d2a5af52ceeb6c29.json  query-61a272b3d8e2d553b41cc478be55a3a79e6f736ee76856ec288ff84d9574eb45.json  query-65824db40ea8883dcabaf7505c5770116ffafaef1733fdc260519f32a20c1fbc.json  query-71068b0a345246baa1d4d5b29dc8d4ebec3c25f4099ec6309ce911b0103d1ad8.json  query-7a99eeeb1c1157ea094d0e5a56dc252561d89b4b93da9a4fbaf5ea0ea1851674.json  query-7c8f34715a8a8ae832338dd1e96aea2e17c4e261087062e6c3a102873785cb6a.json  query-82f05453957a392885eeb5e1585e67df881fdefd7aca75a98e82e873e318e42f.json  query-88f3039ed451bfcce4969bdfd4aa4fdb8dc8ea0e96fd5cd980486e88c5efc539.json  query-899a9e7fb4ecccea7980d6d0af42c5dfbb5609df5b9a66b229c4539a3eca6f33.json  query-91afaff220e7fe0e27332eaf0dfdc01bdef38f866615208ed2ea446abe6e60de.json  query-929e681f98e37ec53dc8e2a065fe1fdd19bdb382c336e24d3b8b52f93a85672a.json  query-9dbed23142f48210eedb8e43f2913279d7adfdacf9cfb919f1cd081c9973b016.json  query-a0f73564b18961b36b97b1bc30e6c6bc0707b8eeb25ed80f875d5e5c456ff125.json  query-a40d7e0777f7aac6c70981028b42d51fe85958f00f90980d97f9e1c7051f40dd.json  (+23 more)
(+292 files in other folders)
